<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />

<TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:fontFamily="serif-monospace"
        android:text="@string/registar_name"
        android:textColor="@color/colorWhite"
        android:textSize="45dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"

        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/colorAce"
        android:hint="@string/phone_hint"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/colorAce"
        android:hint="@string/textPassword"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/colorAce"
        android:hint="@string/textEmail"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.5"
        android:text="@string/register"
        />

</LinearLayout>